GNOME Bugzilla – Bug 617973
Fix annotations for gconf_client_notify_add()
Last modified: 2010-05-07 16:13:34 UTC
Since gconf_client_notify_add() weirdly uses GFreeFunc rather than the identical GDestroyNotify we need to explicit annotate which parameter is the destroy callback. Scan the C files for annotations so that we pick up this annotation addition.
Created attachment 160469 [details] [review] Fix annotations for gconf_client_notify_add()
Review of attachment 160469 [details] [review]: Yep.
Since GFreeFunc and GDestroyNotify are both in glib, shouldn't the parser handle both identically?
(In reply to comment #3) > Since GFreeFunc and GDestroyNotify are both in glib, shouldn't the parser > handle both identically? The parser actually special cases GDestroyNotify. I don't do think doing the same for GFreeFunc makes sense. It's history is: Tue Nov 24 14:05:47 EST 1998 Michael K. Johnson <johnsonm@redhat.com> * glib.h: added GFreeFunc and g_hash_table_set_key_freefunc() prototype. Thu Nov 26 01:36:20 1998 Tim Janik <timj@gtk.org> * ghash.c: reverted the g_hash_table_set_key_freefunc() addition, since it's to specialized and needs to be resolved in a generic fashion. And Tim forgot to remove the typedef. When g_hash_table_new_full() was added in 2001 it used the expected GDestroyNotify.
Same annotation addition was reviewed for gir-repository, so I'm going to go ahead and commit this. Attachment 160469 [details] pushed as d5e22de - Fix annotations for gconf_client_notify_add()