Fix annotations for gconf_client_notify_add()

Since gconf_client_notify_add() weirdly uses GFreeFunc rather
than the identical GDestroyNotify we need to explicit annotate
which parameter is the destroy callback.

Scan the C files for annotations so that we pick up this
annotation addition.

https://bugzilla.gnome.org/show_bug.cgi?id=617973